tests/algorithms/x/PHP/digital_image_processing/edge_detection/canny.error
run: exit status 255

Fatal error: Uncaught DivisionByZeroError: Division by zero in /workspace/mochi/tests/algorithms/x/PHP/digital_image_processing/edge_detection/canny.php:37
Stack trace:
#0 /workspace/mochi/tests/algorithms/x/PHP/digital_image_processing/edge_detection/canny.php(143): sqrtApprox(0.0)
#1 /workspace/mochi/tests/algorithms/x/PHP/digital_image_processing/edge_detection/canny.php(229): sobel_filter(Array)
#2 /workspace/mochi/tests/algorithms/x/PHP/digital_image_processing/edge_detection/canny.php(254): canny(Array, 20.0, 40.0, 128.0, 255.0)
#3 {main}
  thrown in /workspace/mochi/tests/algorithms/x/PHP/digital_image_processing/edge_detection/canny.php on line 37
